# ChangeLog for media-sound/pulseaudio
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/pulseaudio/ChangeLog,v 1.237 2011/07/09 19:54:34 ford_prefect Exp $

  09 Jul 2011; Arun Raghavan <ford_prefect@gentoo.org>
  pulseaudio-0.9.23.ebuild:
  Remove redundant trailing backslash

*pulseaudio-0.9.23 (09 Jul 2011)

  09 Jul 2011; Arun Raghavan <ford_prefect@gentoo.org>
  +pulseaudio-0.9.23.ebuild:
  Bump to 0.9.23. Primarily bug fix release. Also includes an echo cancellation
  module for early testing.

  09 Jul 2011; Raúl Porcel <armin76@gentoo.org> pulseaudio-0.9.22-r2.ebuild:
  alpha/ia64/sh/sparc/x86 stable wrt #372355

  28 Jun 2011; Arun Raghavan <ford_prefect@gentoo.org> pulseaudio-9999.ebuild:
  Fix live ebuild deps

  28 Jun 2011; Brent Baude <ranger@gentoo.org> pulseaudio-0.9.22-r2.ebuild:
  Marking pulseaudio-0.9.22-r2 ppc for bug 372355

  26 Jun 2011; Markus Meier <maekke@gentoo.org> pulseaudio-0.9.22-r2.ebuild:
  arm stable, bug #372355

  23 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
  pulseaudio-0.9.22-r2.ebuild:
  Stable on amd64 wrt bug #372355

  09 Jun 2011; Christoph Mende <angelos@gentoo.org> pulseaudio-0.9.22.ebuild,
  pulseaudio-0.9.22-r2.ebuild, pulseaudio-9999.ebuild:
  Fix typo that made the ebuild pull in udev[hwdb] and udev[extras] (bug
  #370335)

  08 Jun 2011; William Hubbs <williamh@gentoo.org> pulseaudio-0.9.22.ebuild:
  Per ford_prefect, apply the last commit to the stable ebuild.

  08 Jun 2011; William Hubbs <williamh@gentoo.org> pulseaudio-0.9.22.ebuild,
  pulseaudio-0.9.22-r2.ebuild, pulseaudio-9999.ebuild:
  Fix the udev dependency for bug #370335, thanks to ford_prefect.

  20 May 2011; Tomáš Chvátal <scarabeus@gentoo.org> pulseaudio-9999.ebuild:
  Update to eapi4 as acked by Arun.

  20 May 2011; Arun Raghavan <ford_prefect@gentoo.org> pulseaudio-9999.ebuild:
  Upstream git repo changed
